/***********************************************************************
X3 ChangeLog

2008-09-15  Neil Spierling  <sirvulcan@sirvulcan.co.nz>

	* src/proto-p10.c: SGLINE and SSHUN support some stuff coming
	soon in Nefarious.

2008-09-07  Matthew Beeching  <jobe@mdbnet.co.uk>

	* src/chanserv.c: Changed PEON to PAL

	* src/chanserv.help: Changed PEON to PAL

	* src/modcmd.c: Changed PEON to PAL

	* docs/access-levels.txt: Changed PEON to PAL

	* languages/de/chanserv.help: Changed PEON to PAL

	* languages/en_GB/chanserv.help: Changed PEON to PAL

2008-09-06  Matthew Beeching  <jobe@mdbnet.co.uk>

	* src/proto-p10.c: Added new PRIV_*'s to privtab

	* src/mod-snoop.c: Added support for channel mode +h

	* src/hash.h: #define's for missing PRIV_*'s

2008-09-02  Neil Spierling  <sirvulcan@sirvulcan.co.nz>

	* src/chanserv.c: Fixed an issue with OPCHAN and channels using off
	channel.

2008-08-19  Alex Schumann  <rubin@afternet.org>

	* src/chanserv.c: fix a bug in the default wheel spin settings if they
	were not in the config file, x3 would core.

2008-07-21  Neil SPierling  <sirvulcan@sirvulcan.co.nz>

	* src/chanserv.c: Turn the kick ban all chans spin action into a
	timed ban (5 minutes). Also seperated the setting of the ban from
	the stripping of ohv. If Nefarious has halfops disabled then trying
	to strip the modes and set the ban results in the numeric being set
	as the ban. This will need to be fixed in nefarious.

2008-07-20  Alex Schumann  <rubin@afternet.org>

	* src/chanserv.c: remove spin debugging code. Fix gline/kill glitch.

	* src/config.h: bump trunk to 1.7

2008-07-19  Alex Schumann  <rubin@afternet.org>

	* src/proto-p10.c: dont print warning on uping to a jupe. added
	irc_svsquit() function

	* src/chanserv.c: rework wheel-of-misfortune a bit, allow individual
	spins to be enabled in x3.conf and make it easy to add new ones or
	change likelyhoods.

	* src/proto.h: added irc_svsquit() prototype
